Login Page Done

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="header">
         <h2>Flipkart</h2>
-        <a href="./pages/logIn.html">LogIn/SignUp</a>
+        <a class="login-signup-btn" href="./pages/logIn.html">LogIn/SignUp</a>
         <div class="cart-image">
             <a href="./pages/cart.html"><img class="cart-icon" src="./images/cart-icon.png" alt="Cart Icon" /></a>
             <span class="count-in-cart">0</span>
