--- a/pages/logIn.html
+++ b/pages/logIn.html
@@ -1,64 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LogIn Page</title>
-    <link rel="stylesheet" href="../styles/login-signup.css">
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-      crossorigin="anonymous"
-    />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Registeration</title>
+  <link rel="stylesheet" href="../styles/login-signup.css">
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+  <script type="text/javascript">
+    (function () {
+      emailjs.init("Y5lBetFulsC5KSm_B");
+    })();
+  </script>
 </head>
+
 <body>
-    <div class="login-container">
-        <h3>Login Here</h3>
-        <input type="email" placeholder="Email" required>
-        <input type="=password" placeholder="Password" required>
-        <input id="login-submit" type="submit">
-        <p>Don't have account <a class="register-here">Register here</a></p>
+  <div class="login-container">
+    <h3>Login Here</h3>
+    <input id="login-email" type="email" placeholder="Email" required>
+    <input id="login-password" type="password" placeholder="Password" required>
+    <button id="login-btn" type="submit"> Login </button>
+    <p>Don't have account <a class="register-here">Register here</a></p>
+  </div>
+  <div class="signup-container" id="myForm" method="post">
+    <h3>Register Yourself</h3>
+    <input id="full-name" type="text" name="name" placeholder="Full Name" required>
+    <input id="email" name="email" type="email" placeholder="Email" required>
+    <button class="generate-otp-btn" type="submit">Get OTP</button>
+    <div>
+      <input id="enter-otp" type="text" placeholder="Enter OTP" required>
+      <button id="otp-verify" type="submit">Verify OTP</button>
     </div>
-    <div class="signup-container" id="myForm" method="post">
-        <h3>Register Here</h3>
-        <input id="full-name" type="text" name="to_name" placeholder="Full Name" required/>
-        <input id="email" name="email" type="email" placeholder="Email" required/>
-        <button class="generate-otp-btn"type="submit">Get OTP</button>
-        <input type="text" placeholder="Enter OTP" required/>
-        <input id="signup-submit" type="submit"/>
-    </div>
-    <script src="../js/login-signup.mjs" type="text/javascript"></script>
-    <script
-      type="text/javascript"
-      src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"
-    ></script>
-    <script type="text/javascript"> (function () {
-        emailjs.init("Y5lBetFulsC5KSm_B");
-      })();
-    </script>
-    <script>
-        emailjs.sendForm("service_3bfc5u8", "template_x481qkf", "#myForm");
-
-        document.getElementById("myForm")
-        .addEventListener("submit", function (event) {
-          event.preventDefault();
-
-          const serviceID = "service_3bfc5u8";
-          const templateID = "template_x481qkf";
-
-          emailjs.sendForm(serviceID, templateID, this).then(
-            (response) => {
-              console.log("SUCCESS!", response.status, response.text);
-              alert("SUCCESS!");
-            },
-            (error) => {
-              console.log("FAILED...", error);
-              alert("FAILED...", error);
-            }
-          );
-        });
-
-    </script>
+    <input id="password" type="password" placeholder="Password" required>
+    <button id="register-btn" type="submit"> Register </button>
+    <p>Already Registered <a class="login-here">Login Here</a></p>
+  </div>
+  <script src="../js/login-signup.mjs" type="text/javascript"></script>
+  </script>
 </body>
+
 </html>
