--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <a href="./pages/cart.html"><img class="cart-icon" src="./images/cart-icon.png" alt="Cart Icon" /></a>
             <span class="count-in-cart">0</span>
         </div>
+        <!-- <a class="logout-btn" href="./pages/logIn.html">Logout</a> -->
     </div>
     <div class="content" id="content"></div>
     <script type="module" src="./js/main.mjs"></script>
