Multi User, login, sighup, logout complete

--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <div class="header">
         <h2>Flipkart</h2>
         <a class="login-signup-btn" href="./pages/logIn.html">LogIn/SignUp</a>
+        <h3 class="user-name">Hey USERNAME</h3>
         <div class="cart-image">
             <a href="./pages/cart.html"><img class="cart-icon" src="./images/cart-icon.png" alt="Cart Icon" /></a>
             <span class="count-in-cart">0</span>
         </div>
-        <!-- <a class="logout-btn" href="./pages/logIn.html">Logout</a> -->
+        <a class="logout-btn" href="">Logout</a>
     </div>
     <div class="content" id="content"></div>
     <script type="module" src="./js/main.mjs"></script>
