--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a class="login-signup-btn" href="./pages/logIn.html">LogIn/SignUp</a>
         <h3 class="user-name">Hey USERNAME</h3>
         <div class="cart-image">
-            <a href="./pages/cart.html"><img class="cart-icon" src="./images/cart-icon.png" alt="Cart Icon" /></a>
+            <a><img class="cart-icon" src="./images/cart-icon.png" alt="Cart Icon" /></a>
             <span class="count-in-cart">0</span>
         </div>
         <a class="logout-btn" href="">Logout</a>
