--- a/pages/logIn.html
+++ b/pages/logIn.html
@@ -31,7 +31,7 @@
       <input id="enter-otp" type="text" placeholder="Enter OTP" required>
       <button id="otp-verify" type="submit">Verify OTP</button>
     </div>
-    <input id="password" type="password" placeholder="Password" required>
+    <input id="password" type="password" placeholder="Create Password" required>
     <button id="register-btn" type="submit"> Register </button>
     <p>Already Registered <a class="login-here">Login Here</a></p>
   </div>
