Cart, Login, signup, logout all complete

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -12,7 +12,7 @@
 <body>
     <a href="../index.html" class="go-back-home">Home</a>
     <div id="content" class="content"></div>
-    <p class="total-amount-container">Total Amount to Pay : Rs. <span class="total-amount"></span></p>
+    <p class="total-amount-container">Total Amount to Pay : Rs. &nbsp;<span class="total-amount"> </span></p>
     <script type="module" src="../js/cart.mjs"></script>
 </body>
 
