Search bar and Responsiveness added

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,11 @@
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/contentStyle.css">
 </head>
+
 <body>
     <div class="header">
         <h2>Flipkart</h2>
+        <div class="search-bar"><input class="search" type="text" placeholder="Search your product"></div>
         <a class="login-signup-btn" href="./pages/logIn.html">LogIn/SignUp</a>
         <h3 class="user-name">Hey USERNAME</h3>
         <div class="cart-image">
@@ -21,4 +24,5 @@
     <div class="content" id="content"></div>
     <script type="module" src="./js/main.mjs"></script>
 </body>
+
 </html>
