--- a/index.html
+++ b/index.html
@@ -21,8 +21,29 @@
         </div>
         <a class="logout-btn" href="">Logout</a>
     </div>
+    <div class="carousel">
+        <div class="carousel-item"><img
+                src="https://rukminim1.flixcart.com/flap/700/300/image/b0e088ff138c58be.jpg?q=90" alt="Carousel Image">
+        </div>
+        <div class="carousel-item"><img
+                src="https://rukminim1.flixcart.com/flap/700/300/image/aebf043a3a4f15d6.jpg?q=90" alt="Carousel Image">
+        </div>
+        <div class="carousel-item"><img
+                src="https://rukminim1.flixcart.com/flap/700/300/image/c16af8723f41e655.jpeg?q=90" alt="Carousel Image">
+        </div>
+        <div class="carousel-item"><img
+                src="https://rukminim1.flixcart.com/flap/700/300/image/a395b780f474838c.jpg?q=90" alt="Carousel Image">
+        </div>
+        <div class="carousel-item"><img
+                src="https://rukminim1.flixcart.com/flap/700/300/image/714233634472f340.jpeg?q=90" alt="Carousel Image">
+        </div>
+        <div class="carousel-item"><img
+                src="https://rukminim1.flixcart.com/flap/700/300/image/24d2d83a84eee76b.jpg?q=90" alt="Carousel Image">
+        </div>
+    </div>
     <div class="content" id="content"></div>
     <script type="module" src="./js/main.mjs"></script>
+    <script type="module" src="./js/carousel.mjs"></script>
 </body>
 
 </html>
