--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
         <div class="carousel-item"><img
                 src="https://rukminim1.flixcart.com/flap/700/300/image/24d2d83a84eee76b.jpg?q=90" alt="Carousel Image">
         </div>
+
+        <div class="carousel-dots"></div>
     </div>
     <div class="content" id="content"></div>
     <script type="module" src="./js/main.mjs"></script>
