--- a/index.html
+++ b/index.html
@@ -2,56 +2,65 @@
 <html lang="en">
 
 <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Cart</title>
-        <link rel="stylesheet" href="./styles/style.css">
-        <link rel="stylesheet" href="./styles/content-style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cart</title>
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/content-style.css" />
 </head>
 
 <body>
-        <div class="header">
-                <h2>Flipkart</h2>
-                <div class="search-bar"><input class="search" type="text" placeholder="Search your product"></div>
-                <a class="login-signup-btn" href="./pages/logIn.html">LogIn/SignUp</a>
-                <h3 class="user-name">Hey USERNAME</h3>
-                <div class="cart-image">
-                        <a><img class="cart-icon" src="./images/cart-icon.png" alt="Cart Icon" /></a>
-                        <span class="count-in-cart">0</span>
-                </div>
-                <a class="logout-btn" href="">Logout</a>
+    <div class="header">
+        <h2>Flipkart</h2>
+        <div class="search-bar">
+            <input class="search" type="text" placeholder="Search your product" />
         </div>
-        <div class="carousel">
-                <div class="carousel-item"><img
-                                src="https://rukminim1.flixcart.com/flap/700/300/image/b0e088ff138c58be.jpg?q=90"
-                                alt="Carousel Image">
-                </div>
-                <div class="carousel-item"><img
-                                src="https://rukminim1.flixcart.com/flap/700/300/image/aebf043a3a4f15d6.jpg?q=90"
-                                alt="Carousel Image">
-                </div>
-                <div class="carousel-item"><img
-                                src="https://rukminim1.flixcart.com/flap/700/300/image/c16af8723f41e655.jpeg?q=90"
-                                alt="Carousel Image">
-                </div>
-                <div class="carousel-item"><img
-                                src="https://rukminim1.flixcart.com/flap/700/300/image/a395b780f474838c.jpg?q=90"
-                                alt="Carousel Image">
-                </div>
-                <div class="carousel-item"><img
-                                src="https://rukminim1.flixcart.com/flap/700/300/image/714233634472f340.jpeg?q=90"
-                                alt="Carousel Image">
-                </div>
-                <div class="carousel-item"><img
-                                src="https://rukminim1.flixcart.com/flap/700/300/image/24d2d83a84eee76b.jpg?q=90"
-                                alt="Carousel Image">
-                </div>
+        <a class="login-signup-btn" href="./pages/logIn.html">LogIn/SignUp</a>
+        <h3 class="user-name">Hey USERNAME</h3>
+        <div class="cart-image">
+            <a><img class="cart-icon" src="./images/cart-icon.png" alt="Cart Icon" /></a>
+            <span class="count-in-cart">0</span>
+        </div>
+        <a class="logout-btn" href="">Logout</a>
+    </div>
+    <div class="category">
+        <div class="all">All</div>
+        <div class="men">Men</div>
+        <div class="women">Women</div>
+        <div class="jewellery">Jewellery</div>
+        <div class="electonics">Electronics</div>
+    </div>
+    <div class="carousel">
+        <div class="carousel-item">
+            <img src="https://rukminim1.flixcart.com/flap/700/300/image/b0e088ff138c58be.jpg?q=90"
+                alt="Carousel Image" />
+        </div>
+        <div class="carousel-item">
+            <img src="https://rukminim1.flixcart.com/flap/700/300/image/aebf043a3a4f15d6.jpg?q=90"
+                alt="Carousel Image" />
+        </div>
+        <div class="carousel-item">
+            <img src="https://rukminim1.flixcart.com/flap/700/300/image/c16af8723f41e655.jpeg?q=90"
+                alt="Carousel Image" />
+        </div>
+        <div class="carousel-item">
+            <img src="https://rukminim1.flixcart.com/flap/700/300/image/a395b780f474838c.jpg?q=90"
+                alt="Carousel Image" />
+        </div>
+        <div class="carousel-item">
+            <img src="https://rukminim1.flixcart.com/flap/700/300/image/714233634472f340.jpeg?q=90"
+                alt="Carousel Image" />
+        </div>
+        <div class="carousel-item">
+            <img src="https://rukminim1.flixcart.com/flap/700/300/image/24d2d83a84eee76b.jpg?q=90"
+                alt="Carousel Image" />
+        </div>
 
-                <div class="carousel-dots"></div>
-        </div>
-        <div class="content" id="content"></div>
-        <script type="module" src="./js/main.mjs"></script>
-        <script type="module" src="./js/carousel.mjs"></script>
+        <div class="carousel-dots"></div>
+    </div>
+    <div class="content"></div>
+    <script type="module" src="./js/main.mjs"></script>
+    <script type="module" src="./js/carousel.mjs"></script>
 </body>
 
 </html>
