--- a/pages/cart.html
+++ b/pages/cart.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart Items</title>
     <link rel="stylesheet" href="../styles/style.css">
-    <link rel="stylesheet" href="../styles/contentstyle.css">
+    <link rel="stylesheet" href="../styles/content-style.css">
 </head>
 
 <body>
     <a href="../index.html" class="go-back-home">Home</a>
-    <div id="content" class="content"></div>
+    <div class="content"></div>
     <p class="total-amount-container">Total Amount to Pay : Rs. &nbsp;<span class="total-amount"> </span></p>
     <script type="module" src="../js/cart.mjs"></script>
 </body>
