--- a/pages/cart.html
+++ b/pages/cart.html
@@ -5,13 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cart Items</title>
-    <link rel="stylesheet" href="../styles/style.css">
-    <link rel="stylesheet" href="../styles/content-style.css">
+    <link rel="stylesheet" href="../styles/home-style.css">
 </head>
 
 <body>
     <a href="../index.html" class="go-back-home">Home</a>
-    <div class="content"></div>
+    <div class="cart-content"></div>
     <p class="total-amount-container">Total Amount to Pay : Rs. &nbsp;<span class="total-amount"> </span></p>
     <script type="module" src="../js/cart.mjs"></script>
 </body>
