Category section and carousel added

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
         <div class="carousel-images"></div>
         <div class="carousel-dots"></div>
     </div>
+    <div class="category-container">
+        <p class="all active">All</p>
+        <p class="men">Men</p>
+        <p class="women">Women</p>
+        <p class="electronics">Electronics</p>
+    </div>
     <div class="content"></div>
     <script type="module" src="./js/main.mjs"></script>
     <script type="module" src="./js/carousel.mjs"></script>
