--- a/pages/cart.html
+++ b/pages/cart.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <a href="../index.html" class="go-back-home">Home</a>
+    <div class="go-back-home"><a href="../index.html">Home</a></div>
     <div class="cart-content"></div>
     <p class="total-amount-container">Total Amount to Pay : Rs. &nbsp;<span class="total-amount"> </span></p>
     <script type="module" src="../js/cart.mjs"></script>
