--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./styles/nav-style.css">
     <link rel="stylesheet" href="./styles/home-style.css">
     <link rel="stylesheet" href="./styles/carousel-style.css">
+    <link rel="stylesheet" href="./styles/footer-style.css">
 </head>
 
 <body>
@@ -35,6 +36,65 @@
         <p class="electronics">Electronics</p>
     </div>
     <div class="content"></div>
+    <footer class="footer">
+        <div class="footer-details">
+            <div class="about">
+                <p class="heading">ABOUT</p>
+                <a href="#">Contact Us</a>
+                <a href="#">About Us</a>
+                <a href="#">Careers</a>
+                <a href="#">Flipkart Stories</a>
+                <a href="#">Press</a>
+                <a href="#">Corporate Information</a>
+            </div>
+            <div class="group-companies">
+                <p class="heading">GROUP COMPANIES</p>
+                <a href="#">Myntra</a>
+                <a href="#">Flipkart Wholesale</a>
+                <a href="#">Cleartrip</a>
+                <a href="#">Shopsy</a>
+            </div>
+            <div class="help">
+                <p class="heading">HELP</p>
+                <a href="#">Payment</a>
+                <a href="#">Shiping</a>
+                <a href="#">Cancellation & Returns</a>
+                <a href="#">FAQ</a>
+                <a href="#">Report Infringment</a>
+            </div>
+            <div class="consumer-policy">
+                <p class="heading">CONSUMER POLICY</p>
+                <a href="#">Cancellation and Returns</a>
+                <a href="#">Terms of Use</a>
+                <a href="#">Security</a>
+                <a href="#">Privacy</a>
+                <a href="#">Sitemap</a>
+                <a href="#">EPR Compliance</a>
+            </div>
+            <div class="mail-us">
+                <p class="heading">Mail Us:</p>
+                <p>Flipkart Internet Private Limited, Building Alyssa, Begonia & Clove Embassy Tech Village, Outer
+                    Ring Road, Devarabeesanahalli Village, Bangaluru, 560103, Karnataka, India
+                </p>
+            </div>
+            <div class="registered-office-address">
+                <p class="heading">Registered Office Address:</p>
+                <p>Flipkart Internet Private Limited, Building Alyssa, Begonia & Clove Embassy Tech Village, Outer
+                    Ring Road, Devarabeesanahalli Village, Bangaluru, 560103, Karnataka, India <br>
+                    CIN: U94923047HAK83947349 <br> Telephone: 0144478934
+                </p>
+            </div>
+        </div>
+        <hr>
+        <div class="footer-copyright">
+            <p>Copyright &copy; 2024. All Rights Reserved.</p>
+            <div class="social-media">
+                <img src="./images/footer-images/facebook.svg" alt="Facebook">
+                <img src="./images/footer-images/twitter.svg" alt="Twitter">
+                <img src="./images/footer-images/youtube.svg" alt="Youtube">
+            </div>
+        </div>
+    </footer>
     <script type="module" src="./js/main.mjs"></script>
     <script type="module" src="./js/carousel.mjs"></script>
 </body>
