Final Submit, Routing problem solved

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <input class="search" type="text" placeholder="Search your product" />
         </div>
         <h3 class="user-name">username!</h3>
-        <a class="login-button" href="./pages/login.html">LogIn</a>
+        <a class="login-button" href="./pages/login-signup.html">LogIn</a>
         <button class="logout-button">Logout</button>
         <div class="cart-image">
             <a><img class="cart-icon" src="./images/cart-icon.png" alt="Cart Icon" /></a>
